--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <div class="row">
+      <h2>fMRI and DTI Preprocessing</h2>
+      <div class="span4">FSL Group Analyses</div>
+      <div class="span4">FreeSurfer Compare</div>
+      <div class="span4">E-Prime Scripts</div>
+      <div class="span4">Automated Slicer4 Preprocessing</div>
+    </div>
+    <div class="row">
+      <h2>Other</h2>
+      <div class="span4">NFL Penalties</div>
+      <div class="span4">FitBit Data Viz</div>
+      <div class="span4"></div>
+    </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
